<resources>
    <string name="app_name">My expenses</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_btn">Cancel</string>
    <string name="edit_costs_save">Save</string>
    <string name="dot_sign_string">.</string>
    <string name="rur_string">rub</string>
    <string name="usd_string">usd</string>
    <string name="eur_string">eur</string>
    <string name="backup_data_toolbar_text_view_string">Backup</string>
    <string name="backup_data_status_textview_string">Status: none</string>
    <string name="backup_data_backup_button_string">Create backup</string>
    <string name="abd_statusTextView_noConnection_string">No network connection</string>
    <string name="abd_statusTextView_acquiringConnection_string">Establishing network connection...</string>
    <string name="abd_statusTextView_deleting_string">Deleting...</string>
    <string name="abd_errorDeletingBackupFolderToast_string">Error deleting backup data</string>
    <string name="abd_backupFolderDeletedToast_string">Backup deleted</string>
    <string name="abd_statusTextView_searchBackupData_string">Search for backups...</string>
    <string name="abd_statusTextView_noBackupDataFound_string">No backup data found</string>
    <string name="abd_statusTextView_backupDataFound_string">Backup data found</string>
    <string name="abd_restoreButton_string">Restore</string>
    <string name="abd_restoreFromChosenBackupItemDialogBuilder_Title_string">Caution!</string>
    <string name="abd_restoreFromChosenBackupItemDialogBuilder_Message_string">All entries will be replaced with entries from the selected backup.</string>
    <string name="abd_restoreFromChosenBackupItemDialogBuilder_continue_button_string">Continue</string>
    <string name="abd_restoreFromChosenBackupItemDialogBuilder_cancel_button_string">Cancel</string>
    <string name="abd_deleteButton_string">Delete</string>
    <string name="abd_deleteBackupItemDialogBuilder_Title_string">Caution!</string>
    <string name="abd_deleteBackupItemDialogBuilder_Message_string">Delete selected backup?</string>
    <string name="abd_deleteBackupItemDialogBuilder_delete_button_string">Delete</string>
    <string name="abd_deleteBackupItemDialogBuilder_cancel_button_string">Cancel</string>
    <string name="abd_cancelButton_string">Cancel</string>
    <string name="abd_statusTextView_connectionAcquired_string">Connection established</string>
    <string name="abd_statusTextView_connectionSuspended_string">Connection suspended</string>
    <string name="abd_statusTextView_chooseGoogleAccount_string">Choose your Google account</string>
    <string name="abd_dataSavedSuccessful_string">Saving complete</string>
    <string name="abd_dataNotSaved_string">Data not saved!</string>
    <string name="abd_dataRestoredSuccessful_string">Data restored</string>
    <string name="abd_dataNotRestored_string">Data not restored!</string>
    <string name="sms_reader_dialog_category_string">Category</string>
    <string name="sms_reader_dialog_value_string">Value</string>
    <string name="sms_reader_dialog_hint_text_string">Note</string>
    <string name="sms_reader_dialog_save_button_string">Save</string>
    <string name="sms_reader_dialog_cancel_button_string">Cancel</string>
    <string name="sms_expenses_reader_title_string">Reading of expenses from SMS</string>
    <string name="activity_input_data_currency_textview_string">RUB.</string>
    <string name="activity_input_data_input_note_edittext_hint_string">Note</string>
    <string name="activity_input_data_ok_string">OK</string>
    <string name="activity_input_data_del_string">Del</string>
    <string name="activity_input_data_date_yesterday_button_string">Yesterday</string>
    <string name="activity_input_data_date_today_button_string">Today</string>
    <string name="activity_input_data_choose_date_button_string">Date</string>
    <string name="aid_showAlertDialogWithMessage_string">Something went wrong</string>
    <string name="aid_showAlertDialogWithMessage_v2_string">Enter value</string>
    <string name="aid_showAlertDialogWithMessage_v3_string">Everything is very bad!</string>
    <string name="aid_dialogBuilder_positive_button_string">OK</string>
    <string name="aid_wrongPickedDateMessage_string">The date you selected is not yet here</string>
    <string name="activity_main_toolbar_text_view_string">My expenses</string>
    <string name="fragmentCurrentMonthScreenTab_string">Input</string>
    <string name="fragmentLastEnteredValuesTab_string">Recent</string>
    <string name="fragmentStatisticMainScreenTab_string">Statistic</string>
    <string name="savedValueSnackbar_saved_string">saved</string>
    <string name="current_month_screen_month_textview_string">Overall for January</string>
    <string name="current_month_screen_overall_value_textview_string">25255 руб.</string>
    <string name="current_month_single_item_category_textview_string">Electronics</string>
    <string name="current_month_single_item_in_current_month_textview_string">In current month</string>
    <string name="current_month_single_item_value_textview_string">500 руб.</string>
    <string name="fcm_currentMonthTextView_string">Total for</string>
    <string name="fcm_initialCategoriesArray_Products_string">Foodstuff</string>
    <string name="fcm_initialCategoriesArray_Purchases_string">Goods</string>
    <string name="fcm_initialCategoriesArray_Street_food_string">Fast-food</string>
    <string name="fcm_initialCategoriesArray_Transport_string">Transport</string>
    <string name="fcm_initialCategoriesArray_Costs_for_apartment_string">Apartment expenses</string>
    <string name="fcm_initialCategoriesArray_Entertainment_string">Entertainment</string>
    <string name="fcm_initialCategoriesArray_Other_string">Other</string>
    <string name="fcm_addNewCategoryDataUnit_string">Add new category</string>
    <string name="fcm_messageToUser_Category_string">Category</string>
    <string name="fcm_messageToUser_already_created_string">already exists</string>
    <string name="fcm_newCategoryCreatedSnackbar_created_string">created</string>
    <string name="fcm_hasRecordsInCurrentMonthSnackbar_string">You cannot delete a category for which there are records in the current month</string>
    <string name="fcm_deleteCategorySnackbar_string">Entry deleted</string>
    <string name="fcm_deleteCategorySnackbar_action_cancel_string">Cancel</string>
    <string name="fcm_restoreItemSnackbar_string">Entry restored</string>
    <string name="fcm_addNewCostTypeButton_string">Rename</string>
    <string name="fcm_emptyNameToast_string">Enter category name</string>
    <string name="flev_no_data_string">No records</string>
    <string name="flev_today_string">Today</string>
    <string name="flev_yesterday_string">Yesterday</string>
    <string name="flev_deleteItemSnackbar_string">Entry deleted</string>
    <string name="flev_deleteItemSnackbar_action_cancel_string">Cancel</string>
    <string name="flev_restoreItemSnackbar_string">Entry restored</string>
    <string name="statistic_main_screen_chose_period_button_string">Set period</string>
    <string name="statistic_main_screen_no_data_string">No records</string>
    <string name="asmsrv_yearTextView_string">-th year</string>
    <string name="asmsrv_perMonthValueTextView_string">mo</string>
    <string name="activity_statistic_detailed_overall_text_textview_string">Total</string>
    <string name="activity_statistic_detailed_toolbar_textview_string">03.05.1989 - 03.05.2089</string>
    <string name="activity_statistic_detailed_overall_value_textview_string">25255 руб.</string>
    <string name="activity_statistic_detailed_per_day_textview_string">45812 руб./день</string>
    <string name="asd_perDayExpensesTextView_day_string">day</string>
    <string name="activity_statistic_cost_type_detailed_toolbar_textview_string">toolbar</string>
    <string name="activity_statistic_cost_type_detailed_expense_name_textview_string">Total</string>
    <string name="activity_statistic_cost_type_detailed_overall_value_textview_string">25255 руб.</string>
    <string name="activity_statistic_cost_type_detailed_per_day_textview_string">52147 руб./день</string>
    <string name="expense_type_detailed_single_item_date_textview_string">TextView</string>
    <string name="expense_type_detailed_single_item_date_overall_value_textview_string">528458 руб.</string>
    <string name="expense_type_detailed_single_item_expenses_value_textview_string">TextView</string>
    <string name="expense_type_detailed_single_item_expenses_note_textview_string">Note</string>
    <string name="asetd_perDayExpensesTextView_day_string">day</string>
    <string name="sortingTypesList_byDate_string">by date</string>
    <string name="sortingTypesList_byDailySum_string">by daily sum</string>
    <string name="atrd_restoringProgressDialogBuilder_Title_string">Restoring...</string>
    <string name="atrd_restoringProgressDialogBuilder_Message_string">Preparation.</string>
    <string name="atrd_restoringProgressDialogBuilder_Cancel_string">Cancel</string>
    <string name="atrd_publishProgress_StageOne_string">Stage 1/3</string>
    <string name="atrd_publishProgress_StageTwo_string">Stage 2/3</string>
    <string name="atrd_publishProgress_StageThree_string">Stage 3/3</string>
    <string name="atsdd_statusTextView_savingData_string">Saving</string>
    <string name="atsdd_statusTextView_savingDataOnDisk_string">Saving data on GoogleDisk</string>
    <string name="dfcsp_wrongDateToast_string">End date before the start</string>
    <string name="dfeen_categoryTextView_string">Category</string>
    <string name="edit_cost_value_dialog_cancel_button_string">Cancel</string>
    <string name="edit_cost_value_dialog_delete_button_string">Delete</string>
    <string name="edit_cost_value_dialog_edit_button_string">Edit</string>
    <string name="datepicker_ok_button_string">OK</string>
    <string name="datepicker_cancel_button_string">Cancel</string>
    <string name="choose_period_dialog_ok_button_string">OK</string>
    <string name="choose_period_dialog_cancel_button_string">Cancel</string>
    <string name="choose_period_starting_date_textview_string">Start date</string>
    <string name="choose_period_ending_date_textview_string">End date</string>
    <string name="edit_expense_type_popup_expense_type_textview_string">Category name</string>
    <string name="edit_expense_type_popup_rename_expense_type_button_string">Add</string>
    <string name="edit_expense_type_popup_cancel_button_string">Cancel</string>
    <string-array name="DECLENSION_MONTH_NAMES">
        <item>@string/DECLENSION_MONTH_NAMES_january_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_february_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_march_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_april_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_may_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_june_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_july_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_august_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_september_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_october_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_november_string</item>
        <item>@string/DECLENSION_MONTH_NAMES_december_string</item>
    </string-array>
    <string name="DECLENSION_MONTH_NAMES_january_string">January</string>
    <string name="DECLENSION_MONTH_NAMES_february_string">February</string>
    <string name="DECLENSION_MONTH_NAMES_march_string">March</string>
    <string name="DECLENSION_MONTH_NAMES_april_string">April</string>
    <string name="DECLENSION_MONTH_NAMES_may_string">May</string>
    <string name="DECLENSION_MONTH_NAMES_june_string">June</string>
    <string name="DECLENSION_MONTH_NAMES_july_string">July</string>
</resources>