<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backup_data_toolbar"
        android:background="@color/orange">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/ic_arrow_back_white_36dp"
            android:id="@+id/backup_data_arrow_back_imageview"
            android:background="@drawable/activity_input_data_buttons_style"
            android:clickable="true" />

        <TextView
            android:id="@+id/backup_data_toolbar_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/backup_data_arrow_back_imageview"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/backup_data_arrow_back_imageview"
            android:layout_toLeftOf="@+id/backup_data_account_imageview"
            android:layout_toRightOf="@+id/backup_data_arrow_back_imageview"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/backup_data_toolbar_text_view_string"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_height="54dp"
            app:srcCompat="@drawable/ic_account_box_white_36dp"
            android:id="@+id/backup_data_account_imageview"
            android:layout_width="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/activity_input_data_buttons_style"
            android:clickable="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/backup_data_status_layout"
        android:layout_below="@+id/backup_data_toolbar"
        android:background="@color/orange" >

        <TextView
            android:id="@+id/backup_data_status_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/backup_data_status_textview_string"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backup_data_recycler_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/backup_data_status_layout"
        android:layout_above="@+id/backup_data_buttons_separator_layout"
        android:padding="5dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/backup_data_buttons_separator_layout"
        android:layout_above="@+id/backup_data_buttons_layout"
        android:background="@color/orange"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/backup_data_buttons_layout">

        <Button
            android:id="@+id/backup_data_backup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_buttons_custom"
            android:text="@string/backup_data_backup_button_string"
            android:textColor="@color/button_text_color" />

    </LinearLayout>

</RelativeLayout>
